<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_task"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_task_short"
        android:shortcutLongLabel="@string/shortcut_new_task_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="life.arshnaz.app"
            android:targetClass="life.arshnaz.app.MainActivity"
            android:data="arshnaz://new-task" />
    </shortcut>
    <shortcut
        android:shortcutId="today"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="life.arshnaz.app"
            android:targetClass="life.arshnaz.app.MainActivity"
            android:data="arshnaz://today" />
    </shortcut>
    <shortcut
        android:shortcutId="checkin"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_checkin_short"
        android:shortcutLongLabel="@string/shortcut_checkin_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="life.arshnaz.app"
            android:targetClass="life.arshnaz.app.MainActivity"
            android:data="arshnaz://checkin" />
    </shortcut>
</shortcuts>
